tests/base/invalid/MethodRef_Invalid_1.whiley
import whiley.lang.*:*

define FileReader as {
    int position,
    [byte] data
}

define Reader as { 
    int(FileReader)::(int) read
}
